# c-dev

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.in  NEWS  README  config.h  config.h.in  configure  configure.ac  configure.scan  depcomp  install-sh  make-tarball  makefile.am  makefile.in  missing
01-helloworld/: helloWorld.c  makefile.am  makefile.in
02-function/: function.c  main.c  makefile.in
03-arguments/: arguments.c  makefile.in
04-user-input/: makefile.in  user-input.c
05-integers/: integers.c  makefile.in
06-floats/: floats.c  makefile.in
07-advanced-input/: advanced-input.c  makefile.in
08-cli-arguments/: cli-arguments.c  makefile.in
09-files/: files.c  makefile.in
10-loops/: makefile.am  makefile.in
11-conditions/: conditions.c  makefile.am  makefile.in
12-time/: makefile.am  makefile.in  time.c
13-structure/: makefile.am  makefile.in  structures.c
14-process/: makefile.am  makefile.in  process.c
15-thread/: dumb_thread.c  makefile.am  makefile.in  smart_thread.c
16-sharedmem/: makefile.am  makefile.in  shared_mem.c
17-semaphore/: makefile.in  semaphore.c
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
src/: Makefile.am  Makefile.in
src/01-helloworld/: Makefile.in  helloWorld.c
src/02-function/: Makefile.am  Makefile.in  function.h
src/03-arguments/: Makefile.am  Makefile.in  arguments.c
src/04-user-input/: Makefile.am  Makefile.in  user-input.c
src/05-integers/: Makefile.am  Makefile.in
src/06-floats/: Makefile.am  Makefile.in  floats.c
src/07-advanced-input/: Makefile.am  Makefile.in  advanced-input.c
src/08-cli-arguments/: Makefile.am  Makefile.in  cli-arguments.c
src/09-files/: Makefile.am  Makefile.in  source.txt
src/10-loops/: Makefile.in  loops.c
src/11-conditions/: Makefile.in  conditions.c
src/12-time/: Makefile.in  time.c
src/13-structure/: Makefile.in
src/14-process/: Makefile.in  process.c
src/15-thread/: Makefile.in  dumb_thread.c
src/16-sharedmem/: Makefile.in
src/17-semaphore/: Makefile.am  Makefile.in  semaphore.c
